# last-minute-life-saver

./: README.md
backend-cpp/: .gitignore  CMakeLists.txt  Dockerfile  build.txt  main.cpp
backend-cpp/include/: json.hpp
backend-cpp/models/: Task.cpp  Task.h
backend-cpp/routes/: AnalyticsRoutes.cpp  AnalyticsRoutes.h  PlannerRoutes.cpp  PlannerRoutes.h  PriorityRoutes.cpp  PriorityRoutes.h  TaskRoutes.cpp  TaskRoutes.h  UpdateTaskRoutes.cpp  UpdateTaskRoutes.h
backend-cpp/services/: GeminiService.cpp  GeminiService.h  PriorityEngine.cpp  PriorityEngine.h  RecommendationEngine.cpp  RecommendationEngine.h  RiskAnalyzer.cpp  RiskAnalyzer.h
backend-cpp/src/: TaskManager.cpp  TaskManager.h
backend-cpp/utils/: DateUtils.cpp  DateUtils.h
frontend/: package-lock.json  package.json
frontend/src/: App.css  App.jsx
